[FEAT]: Aggregate subcategory content under parent categories on home feed + add featured list pagination
Home feed now shows only parent (top-level) categories with content
aggregated from all subcategories. Previously subcategories appeared as
separate sections, fragmenting content. Also adds pagination to the
"See All" screen so all category content is accessible.

Backend:
- Filter home feed to parent categories only, aggregate child content
- Add multi-category repository methods (findByCategoryIds) with dedup
- Resolve parent→children in /api/v1/content for See All aggregation
- Admin sort order init now includes subcategory content for parents
- Fix content count dedup to avoid double-counting across subcategories

Android:
- Fix featured list bottom padding (android:padding override bug)
- Add cursor-based pagination to FeaturedListViewModel (PAGE_SIZE=50)
- Add scroll listener + tablet/TV auto-load in FeaturedListFragment

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>