@@ -25,6 +25,10 @@ import static org.mockito.Mockito.*;
 
 /**
  * Unit tests for PublicContentService.getHomeFeed().
+ *
+ * The home feed only shows parent (top-level) categories. Subcategory content
+ * is aggregated under the parent section. Methods use List-based category IDs
+ * (parent + children) for aggregation.
  */
 @ExtendWith(MockitoExtension.class)
 class PublicContentServiceHomeFeedTest {
@@ -61,10 +65,10 @@ class PublicContentServiceHomeFeedTest {
         Category cat = makeCategory("c1", "Quran", 0);
         when(categoryRepository.findAll()).thenReturn(List.of(cat));
         // No order entries and no content in category
-        when(orderRepository.findByCategoryIdOrderByPosition("c1")).thenReturn(Collections.emptyList());
-        when(channelRepository.findByCategoryId(eq("c1"), anyInt())).thenReturn(Collections.emptyList());
-        when(playlistRepository.findByCategoryId(eq("c1"), anyInt())).thenReturn(Collections.emptyList());
-        when(videoRepository.findByCategoryId(eq("c1"), anyInt())).thenReturn(Collections.emptyList());
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c1"))).thenReturn(Collections.emptyList());
+        when(channelRepository.findByCategoryIds(eq(List.of("c1")), anyInt())).thenReturn(Collections.emptyList());
+        when(playlistRepository.findByCategoryIds(eq(List.of("c1")), anyInt())).thenReturn(Collections.emptyList());
+        when(videoRepository.findByCategoryIds(eq(List.of("c1")), anyInt())).thenReturn(Collections.emptyList());
 
         CursorPageDto<HomeCategoryDto> result = service.getHomeFeed(null, 5, 10, null);
 
@@ -78,8 +82,8 @@ class PublicContentServiceHomeFeedTest {
 
         // Set up order entries and batch-fetched content
         CategoryContentOrder entry = new CategoryContentOrder("c1", "ch1", "channel", 0);
-        when(orderRepository.findByCategoryIdOrderByPosition("c1")).thenReturn(List.of(entry));
-        when(orderRepository.countByCategoryId("c1")).thenReturn(1L);
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c1"))).thenReturn(List.of(entry));
+        when(orderRepository.countByCategoryIds(List.of("c1"))).thenReturn(1L);
 
         Channel channel = new Channel();
         channel.setId("ch1");
@@ -102,7 +106,7 @@ class PublicContentServiceHomeFeedTest {
 
     @Test
     void getHomeFeed_paginatesCategoriesWithCursor() throws Exception {
-        // Create 3 categories, request 2 per page
+        // Create 3 parent categories, request 2 per page
         Category cat1 = makeCategory("c1", "A", 0);
         Category cat2 = makeCategory("c2", "B", 1);
         Category cat3 = makeCategory("c3", "C", 2);
@@ -111,8 +115,8 @@ class PublicContentServiceHomeFeedTest {
         // Each category has one channel
         for (String catId : List.of("c1", "c2", "c3")) {
             CategoryContentOrder entry = new CategoryContentOrder(catId, "ch_" + catId, "channel", 0);
-            when(orderRepository.findByCategoryIdOrderByPosition(catId)).thenReturn(List.of(entry));
-            when(orderRepository.countByCategoryId(catId)).thenReturn(1L);
+            when(orderRepository.findByCategoryIdsOrderByPosition(List.of(catId))).thenReturn(List.of(entry));
+            when(orderRepository.countByCategoryIds(List.of(catId))).thenReturn(1L);
 
             Channel ch = new Channel();
             ch.setId("ch_" + catId);
@@ -139,8 +143,8 @@ class PublicContentServiceHomeFeedTest {
         when(categoryRepository.findAll()).thenReturn(List.of(cat));
 
         CategoryContentOrder entry = new CategoryContentOrder("c1", "ch1", "channel", 0);
-        when(orderRepository.findByCategoryIdOrderByPosition("c1")).thenReturn(List.of(entry));
-        when(orderRepository.countByCategoryId("c1")).thenReturn(42L);
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c1"))).thenReturn(List.of(entry));
+        when(orderRepository.countByCategoryIds(List.of("c1"))).thenReturn(42L);
 
         Channel ch = new Channel();
         ch.setId("ch1");
@@ -158,7 +162,7 @@ class PublicContentServiceHomeFeedTest {
 
     @Test
     void getHomeFeed_handlesSparseCategoriesAcrossBatches() throws Exception {
-        // 8 categories: c1-c5 empty, c6-c8 have content. Request limit=3.
+        // 8 parent categories: c1-c5 empty, c6-c8 have content. Request limit=3.
         // Verifies batch scanning continues past empty categories to find content.
         List<Category> cats = new ArrayList<>();
         for (int i = 1; i <= 8; i++) {
@@ -166,24 +170,22 @@ class PublicContentServiceHomeFeedTest {
         }
         when(categoryRepository.findAll()).thenReturn(cats);
 
-        // Default stubs (anyString/anyList catch-alls): registered BEFORE specific matchers
-        // so Mockito's last-wins-for-equal-specificity doesn't override the per-category stubs below.
-        // Specific matchers (e.g., List.of("ch_c6")) always take priority over anyList().
-        when(orderRepository.findByCategoryIdOrderByPosition(anyString())).thenReturn(Collections.emptyList());
-        when(orderRepository.countByCategoryId(anyString())).thenReturn(0L);
-        when(channelRepository.findByCategoryId(anyString(), anyInt())).thenReturn(Collections.emptyList());
-        when(playlistRepository.findByCategoryId(anyString(), anyInt())).thenReturn(Collections.emptyList());
-        when(videoRepository.findByCategoryId(anyString(), anyInt())).thenReturn(Collections.emptyList());
+        // Default stubs: all categories empty
+        when(orderRepository.findByCategoryIdsOrderByPosition(anyList())).thenReturn(Collections.emptyList());
+        when(orderRepository.countByCategoryIds(anyList())).thenReturn(0L);
+        when(channelRepository.findByCategoryIds(anyList(), anyInt())).thenReturn(Collections.emptyList());
+        when(playlistRepository.findByCategoryIds(anyList(), anyInt())).thenReturn(Collections.emptyList());
+        when(videoRepository.findByCategoryIds(anyList(), anyInt())).thenReturn(Collections.emptyList());
 
-        // Categories c6-c8 have one channel each via admin-defined order
         when(channelRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(playlistRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(videoRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
 
+        // Categories c6-c8 have one channel each via admin-defined order
         for (String catId : List.of("c6", "c7", "c8")) {
             CategoryContentOrder entry = new CategoryContentOrder(catId, "ch_" + catId, "channel", 0);
-            when(orderRepository.findByCategoryIdOrderByPosition(catId)).thenReturn(List.of(entry));
-            when(orderRepository.countByCategoryId(catId)).thenReturn(1L);
+            when(orderRepository.findByCategoryIdsOrderByPosition(List.of(catId))).thenReturn(List.of(entry));
+            when(orderRepository.countByCategoryIds(List.of(catId))).thenReturn(1L);
 
             Channel ch = new Channel();
             ch.setId("ch_" + catId);
@@ -199,24 +201,22 @@ class PublicContentServiceHomeFeedTest {
         assertEquals("c6", result.getData().get(0).getId());
         assertEquals("c7", result.getData().get(1).getId());
         assertEquals("c8", result.getData().get(2).getId());
-        // No more categories beyond c8, so hasMore=false
         assertNull(result.getPageInfo().getNextCursor());
     }
 
     @Test
     void getHomeFeed_fallbackFillsVideosWhenChannelsPlaylistsSparse() throws Exception {
         // Category with no admin-sort order, no channels/playlists, only videos.
-        // Verifies the fallback path fills remaining slots with videos.
         Category cat = makeCategory("c1", "Videos Only", 0);
         when(categoryRepository.findAll()).thenReturn(List.of(cat));
 
         // No admin-defined order → falls back to per-type queries
-        when(orderRepository.findByCategoryIdOrderByPosition("c1")).thenReturn(Collections.emptyList());
-        when(orderRepository.countByCategoryId("c1")).thenReturn(0L);
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c1"))).thenReturn(Collections.emptyList());
+        when(orderRepository.countByCategoryIds(List.of("c1"))).thenReturn(0L);
 
         // No channels or playlists in this category
-        when(channelRepository.findByCategoryId(eq("c1"), anyInt())).thenReturn(Collections.emptyList());
-        when(playlistRepository.findByCategoryId(eq("c1"), anyInt())).thenReturn(Collections.emptyList());
+        when(channelRepository.findByCategoryIds(eq(List.of("c1")), anyInt())).thenReturn(Collections.emptyList());
+        when(playlistRepository.findByCategoryIds(eq(List.of("c1")), anyInt())).thenReturn(Collections.emptyList());
 
         // 5 approved videos
         List<Video> videos = new ArrayList<>();
@@ -228,38 +228,33 @@ class PublicContentServiceHomeFeedTest {
             v.setStatus("APPROVED");
             videos.add(v);
         }
-        when(videoRepository.findByCategoryId(eq("c1"), anyInt())).thenReturn(videos);
+        when(videoRepository.findByCategoryIds(eq(List.of("c1")), anyInt())).thenReturn(videos);
 
         CursorPageDto<HomeCategoryDto> result = service.getHomeFeed(null, 5, 10, null);
 
         assertEquals(1, result.getData().size());
         HomeCategoryDto section = result.getData().get(0);
         assertEquals("c1", section.getId());
-        // With contentLimit=10: perType=3, channels=0, playlists=0, videoLimit=10-0-0=10
-        // Only 5 videos available, so 5 items returned
         assertEquals(5, section.getItems().size());
     }
 
     @Test
     void getHomeFeed_throwsWhenAllCategoriesFail() throws Exception {
-        // When every category content fetch fails, the method should throw
-        // to prevent caching a degraded empty response.
         Category cat1 = makeCategory("c1", "A", 0);
         Category cat2 = makeCategory("c2", "B", 1);
         when(categoryRepository.findAll()).thenReturn(List.of(cat1, cat2));
 
         // All content fetches throw
-        when(orderRepository.findByCategoryIdOrderByPosition(anyString()))
+        when(orderRepository.findByCategoryIdsOrderByPosition(anyList()))
                 .thenThrow(new RuntimeException("Firestore unavailable"));
-        when(orderRepository.countByCategoryId(anyString())).thenReturn(0L);
+        when(orderRepository.countByCategoryIds(anyList())).thenReturn(0L);
 
         assertThrows(Exception.class, () -> service.getHomeFeed(null, 5, 10, null));
     }
 
     @Test
     void getHomeFeed_returnsSuccessfulCategoriesWhenSomeFail() throws Exception {
-        // 3 categories: c1 succeeds, c2 throws, c3 succeeds.
-        // Verifies partial failure returns the successful ones.
+        // 3 parent categories: c1 succeeds, c2 throws, c3 succeeds.
         Category cat1 = makeCategory("c1", "Succeeds", 0);
         Category cat2 = makeCategory("c2", "Fails", 1);
         Category cat3 = makeCategory("c3", "Also Succeeds", 2);
@@ -269,29 +264,28 @@ class PublicContentServiceHomeFeedTest {
         when(channelRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(playlistRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(videoRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
-        when(orderRepository.countByCategoryId(anyString())).thenReturn(1L);
+        when(orderRepository.countByCategoryIds(anyList())).thenReturn(1L);
 
         // c1: has one channel via admin order
         CategoryContentOrder entry1 = new CategoryContentOrder("c1", "ch1", "channel", 0);
-        when(orderRepository.findByCategoryIdOrderByPosition("c1")).thenReturn(List.of(entry1));
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c1"))).thenReturn(List.of(entry1));
         Channel ch1 = new Channel();
         ch1.setId("ch1"); ch1.setYoutubeId("UC1"); ch1.setName("Chan 1"); ch1.setStatus("APPROVED");
         when(channelRepository.findAllByIds(List.of("ch1"))).thenReturn(Map.of("ch1", ch1));
 
         // c2: throws RuntimeException
-        when(orderRepository.findByCategoryIdOrderByPosition("c2"))
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c2")))
                 .thenThrow(new RuntimeException("Firestore timeout"));
 
         // c3: has one channel via admin order
         CategoryContentOrder entry3 = new CategoryContentOrder("c3", "ch3", "channel", 0);
-        when(orderRepository.findByCategoryIdOrderByPosition("c3")).thenReturn(List.of(entry3));
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c3"))).thenReturn(List.of(entry3));
         Channel ch3 = new Channel();
         ch3.setId("ch3"); ch3.setYoutubeId("UC3"); ch3.setName("Chan 3"); ch3.setStatus("APPROVED");
         when(channelRepository.findAllByIds(List.of("ch3"))).thenReturn(Map.of("ch3", ch3));
 
         CursorPageDto<HomeCategoryDto> result = service.getHomeFeed(null, 5, 10, null);
 
-        // c1 and c3 succeed, c2 failed silently
         assertEquals(2, result.getData().size());
         assertEquals("c1", result.getData().get(0).getId());
         assertEquals("c3", result.getData().get(1).getId());
@@ -300,15 +294,13 @@ class PublicContentServiceHomeFeedTest {
 
     @Test
     void getHomeFeed_fallsBackToItemSizeWhenCountFails() throws Exception {
-        // Count future throws but items future succeeds.
-        // Verifies totalContentCount falls back to items.size() instead of 0.
         Category cat = makeCategory("c1", "Resilient", 0);
         when(categoryRepository.findAll()).thenReturn(List.of(cat));
 
         CategoryContentOrder entry = new CategoryContentOrder("c1", "ch1", "channel", 0);
-        when(orderRepository.findByCategoryIdOrderByPosition("c1")).thenReturn(List.of(entry));
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("c1"))).thenReturn(List.of(entry));
         // Count query throws
-        when(orderRepository.countByCategoryId("c1"))
+        when(orderRepository.countByCategoryIds(List.of("c1")))
                 .thenThrow(new RuntimeException("Firestore count timeout"));
 
         Channel ch = new Channel();
@@ -320,7 +312,6 @@ class PublicContentServiceHomeFeedTest {
         CursorPageDto<HomeCategoryDto> result = service.getHomeFeed(null, 5, 10, null);
 
         assertEquals(1, result.getData().size());
-        // Count failed → fallback: totalCount = items.size() = 1
         assertEquals(1, result.getData().get(0).getTotalContentCount());
     }
 
@@ -330,14 +321,13 @@ class PublicContentServiceHomeFeedTest {
         Category cat2 = makeCategory("kids", "Kids", 1);
         when(categoryRepository.findAll()).thenReturn(List.of(cat1, cat2));
 
-        // Only "quran" will be queried (kids is filtered out)
         when(channelRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(playlistRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(videoRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
-        when(orderRepository.countByCategoryId("quran")).thenReturn(1L);
+        when(orderRepository.countByCategoryIds(List.of("quran"))).thenReturn(1L);
 
         CategoryContentOrder entry = new CategoryContentOrder("quran", "ch_quran", "channel", 0);
-        when(orderRepository.findByCategoryIdOrderByPosition("quran")).thenReturn(List.of(entry));
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("quran"))).thenReturn(List.of(entry));
 
         Channel ch = new Channel();
         ch.setId("ch_quran");
@@ -354,7 +344,9 @@ class PublicContentServiceHomeFeedTest {
     }
 
     @Test
-    void getHomeFeed_includesChildCategoriesWhenFiltering() throws Exception {
+    void getHomeFeed_aggregatesSubcategoryContentUnderParent() throws Exception {
+        // Parent "quran" has child "tafsir". Home feed should show only "quran"
+        // with content aggregated from both quran and tafsir.
         Category parent = makeCategory("quran", "Quran", 0);
         Category child = makeCategory("tafsir", "Tafsir", 1);
         child.setParentCategoryId("quran");
@@ -364,24 +356,39 @@ class PublicContentServiceHomeFeedTest {
         when(channelRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(playlistRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
         when(videoRepository.findAllByIds(anyList())).thenReturn(Collections.emptyMap());
-        when(orderRepository.countByCategoryId(anyString())).thenReturn(1L);
 
-        // Only quran and tafsir will be queried (kids filtered out)
-        for (String catId : List.of("quran", "tafsir")) {
-            CategoryContentOrder entry = new CategoryContentOrder(catId, "ch_" + catId, "channel", 0);
-            when(orderRepository.findByCategoryIdOrderByPosition(catId)).thenReturn(List.of(entry));
-            Channel ch = new Channel();
-            ch.setId("ch_" + catId); ch.setYoutubeId("UC_" + catId);
-            ch.setName("Chan " + catId); ch.setStatus("APPROVED");
-            when(channelRepository.findAllByIds(List.of("ch_" + catId))).thenReturn(Map.of("ch_" + catId, ch));
-        }
+        // quran has sort order entries from both quran and tafsir
+        CategoryContentOrder e1 = new CategoryContentOrder("quran", "ch_quran", "channel", 0);
+        CategoryContentOrder e2 = new CategoryContentOrder("tafsir", "ch_tafsir", "channel", 0);
+        // findByCategoryIdsOrderByPosition([quran, tafsir]) returns merged entries
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("quran", "tafsir")))
+                .thenReturn(List.of(e1, e2));
+        when(orderRepository.countByCategoryIds(List.of("quran", "tafsir"))).thenReturn(2L);
 
-        // Filter by "quran" should include quran + tafsir (child), exclude kids
-        CursorPageDto<HomeCategoryDto> result = service.getHomeFeed(null, 5, 10, "quran");
+        Channel ch1 = new Channel();
+        ch1.setId("ch_quran"); ch1.setYoutubeId("UC_quran");
+        ch1.setName("Quran Channel"); ch1.setStatus("APPROVED");
+        Channel ch2 = new Channel();
+        ch2.setId("ch_tafsir"); ch2.setYoutubeId("UC_tafsir");
+        ch2.setName("Tafsir Channel"); ch2.setStatus("APPROVED");
+        when(channelRepository.findAllByIds(List.of("ch_quran", "ch_tafsir")))
+                .thenReturn(Map.of("ch_quran", ch1, "ch_tafsir", ch2));
 
-        assertEquals(2, result.getData().size());
-        assertTrue(result.getData().stream().anyMatch(s -> "quran".equals(s.getId())));
-        assertTrue(result.getData().stream().anyMatch(s -> "tafsir".equals(s.getId())));
+        // kids category is also a parent, set up separately
+        when(orderRepository.findByCategoryIdsOrderByPosition(List.of("kids"))).thenReturn(Collections.emptyList());
+        when(orderRepository.countByCategoryIds(List.of("kids"))).thenReturn(0L);
+        when(channelRepository.findByCategoryIds(eq(List.of("kids")), anyInt())).thenReturn(Collections.emptyList());
+        when(playlistRepository.findByCategoryIds(eq(List.of("kids")), anyInt())).thenReturn(Collections.emptyList());
+        when(videoRepository.findByCategoryIds(eq(List.of("kids")), anyInt())).thenReturn(Collections.emptyList());
+
+        CursorPageDto<HomeCategoryDto> result = service.getHomeFeed(null, 5, 10, null);
+
+        // Only parent categories shown: quran (with aggregated content) and kids (empty, skipped)
+        // tafsir is NOT a separate section — its content is under quran
+        assertEquals(1, result.getData().size());
+        assertEquals("quran", result.getData().get(0).getId());
+        assertEquals(2, result.getData().get(0).getItems().size());
+        assertEquals(2, result.getData().get(0).getTotalContentCount());
     }
 
     // --- Helper ---
